# llm-foundation-lab-project

./: README.md  pyproject.toml  requirements.txt
data/: PRJ_AFFC_HIST_EN_CSV.csv  PRJ_AFFC_HIST_EN_XLSX.xlsx  PRJ_AFFC_HIST_KR_CSV.csv  PRJ_AFFC_HIST_KR_XLS.xls  PRJ_AFFC_HIST_XLS.xls  PRJ_CHN_ERR_LISTS.csv  PRJ_CHN_ERR_LISTS.md  PRJ_MEM_LISTS_CSV.csv
src/: common.py  funny.py  load_affiliate_data.py  load_channel_data.py  load_langfuze_prompt.py  load_member_data.py  main.py  service_affiliate_qna.py  service_channel_qna.py  service_check_service_type.py  service_generate_response.py  service_revise_qna.py  start_service.py
