[project]
name = "llm-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "docling>=2.54.0",
    "gradio>=5.46.1",
    "ipykernel>=6.30.1",
    "langchain>=0.3.27",
    "langchain-chroma>=0.2.6",
    "langchain-community>=0.3.29",
    "langchain-experimental>=0.3.4",
    "langchain-neo4j>=0.5.0",
    "langchain-ollama>=0.3.8",
    "langchain-openai>=0.3.33",
    "langchain-tavily>=0.2.11",
    "langfuse>=3.5.0",
    "langgraph>=0.6.7",
    "langgraph-api>=0.4.27",
    "langgraph-checkpoint-sqlite>=2.0.11",
    "langgraph-cli>=0.4.2",
    "matplotlib>=3.10.6",
    "pypdf>=6.1.1",
    "python-dotenv>=1.1.1",
    "ragas==0.3.1",
    "rank-bm25>=0.2.2",
    "ranx>=0.3.21",
    "ranx-k>=0.0.17",
    "rapidfuzz>=3.14.1",
    "seaborn>=0.13.2",
    "xlrd>=2.0.2",
    "yfinance>=0.2.66",
]
[project.scripts]
llm-project = "src.main:main"
